crates/ruff_python_parser/tests/snapshots/valid_syntax@parenthesized_star_index_py310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..94,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 44..93,
                    targets: [
                        Subscript(
                            ExprSubscript {
                                node_index: NodeIndex(None),
                                range: 44..89,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 44..47,
                                        id: Name("out"),
                                        ctx: Load,
                                    },
                                ),
                                slice: Tuple(
                                    ExprTuple {
                                        node_index: NodeIndex(None),
                                        range: 48..88,
                                        elts: [
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 49..81,
                                                    value: Generator(
                                                        ExprGenerator {
                                                            node_index: NodeIndex(None),
                                                            range: 50..81,
                                                            elt: Call(
                                                                ExprCall {
                                                                    node_index: NodeIndex(None),
                                                                    range: 51..62,
                                                                    func: Name(
                                                                        ExprName {
                                                                            node_index: NodeIndex(None),
                                                                            range: 51..56,
                                                                            id: Name("slice"),
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    arguments: Arguments {
                                                                        range: 56..62,
                                                                        node_index: NodeIndex(None),
                                                                        args: [
                                                                            NoneLiteral(
                                                                                ExprNoneLiteral {
                                                                                    node_index: NodeIndex(None),
                                                                                    range: 57..61,
                                                                                },
                                                                            ),
                                                                        ],
                                                                        keywords: [],
                                                                        runtime_args: None,
                                                                        runtime_bases: None,
                                                                    },
                                                                },
                                                            ),
                                                            generators: [
                                                                Comprehension {
                                                                    range: 63..80,
                                                                    node_index: NodeIndex(None),
                                                                    target: Name(
                                                                        ExprName {
                                                                            node_index: NodeIndex(None),
                                                                            range: 67..68,
                                                                            id: Name("_"),
                                                                            ctx: Store,
                                                                        },
                                                                    ),
                                                                    iter: Call(
                                                                        ExprCall {
                                                                            node_index: NodeIndex(None),
                                                                            range: 72..80,
                                                                            func: Name(
                                                                                ExprName {
                                                                                    node_index: NodeIndex(None),
                                                                                    range: 72..77,
                                                                                    id: Name("range"),
                                                                                    ctx: Load,
                                                                                },
                                                                            ),
                                                                            arguments: Arguments {
                                                                                range: 77..80,
                                                                                node_index: NodeIndex(None),
                                                                                args: [
                                                                                    NumberLiteral(
                                                                                        ExprNumberLiteral {
                                                                                            node_index: NodeIndex(None),
                                                                                            range: 78..79,
                                                                                            value: Int(
                                                                                                2,
                                                                                            ),
                                                                                        },
                                                                                    ),
                                                                                ],
                                                                                keywords: [],
                                                                                runtime_args: None,
                                                                                runtime_bases: None,
                                                                            },
                                                                        },
                                                                    ),
                                                                    ifs: [],
                                                                    is_async: false,
                                                                    runtime_ifs: None,
                                                                    runtime_is_async: None,
                                                                },
                                                            ],
                                                            parenthesized: true,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 83..87,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 84..87,
                                                            id: Name("ind"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                        parenthesized: true,
                                        runtime_elts: None,
                                    },
                                ),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 92..93,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    runtime_targets: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
