crates/ruff_python_parser/tests/snapshots/valid_syntax@read_from_debug.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..32,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 0..17,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 3..12,
                            id: Name("__debug__"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 14..17,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 14..17,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                    runtime_body: None,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 18..31,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 18..19,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 22..31,
                            id: Name("__debug__"),
                            ctx: Load,
                        },
                    ),
                    runtime_targets: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
